--- a/style.css
+++ b/style.css
@@ -1,8 +1,44 @@
 body{
-	background-color: blue;
+	background-color: #ffffe6;
 	margin: 0;
 	padding: 0;
 	color: white;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
 }
 
 h1{
@@ -13,7 +49,7 @@ h1{
 .register{
 	width: 320px;
 	height: 450px;
-	background: #9999ff;
+	background: dodgerblue;
 	color: white;
 	top: 50%;
 	left: 50%;
