--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 20px 10px;
+  width: auto;
 }
 
 .header a {
@@ -78,3 +79,111 @@ input[type=submit]{
 	background-color: #ffff80;
 }
 
+.footer{
+	position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #f1f1f1;
+   color: black;
+   text-align: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+nav {
+    font-family: monospace;
+    width: 100%;
+    position: absolute;
+    top: 45%;
+    left: 38%;
+}
+
+ul {
+  background: darkorange;
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+
+}
+
+li {
+    color: #fff;
+  background: darkorange;
+    display: block;
+    float: left;
+    padding: 1rem;
+    position: relative;
+    text-decoration: none;
+  transition-duration: 0.5s;
+}
+  
+li a {
+  color: #fff;
+}
+
+li:hover {
+    background: red;
+    cursor: pointer;
+}
+
+ul li ul {
+    background: orange;
+    visibility: hidden;
+  opacity: 0;
+  min-width: 5rem;
+    position: absolute;
+  transition: all 0.5s ease;
+  margin-top: 1rem;
+    left: 0;
+  display: none;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+}
+
+ul li ul li {
+    clear: both;
+  width: 100%;
+}
+
+
+input[type=text] {
+    width: 380px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('searchicon.png'); /*add this */
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    left: 35%;
+    top: 35%;
+    position: absolute;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+  .search{
+  	float: none;
+  	display: block;
+  	text-align: left;
+  }
+}
