--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-body{
+html{
 	background-color: #ffffe6;
 	margin: 0;
 	padding: 0;
 	color: white;
+	font-family: monospace
+	width:auto;
 }
 
 .header {
@@ -50,7 +52,7 @@ h1{
 .register{
 	width: 320px;
 	height: 450px;
-	background: dodgerblue;
+	background: darkorange;
 	color: white;
 	top: 50%;
 	left: 50%;
@@ -79,79 +81,48 @@ input[type=submit]{
 	background-color: #ffff80;
 }
 
-.footer{
-	position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: #f1f1f1;
-   color: black;
-   text-align: center;
-}
 
-a {
-  text-decoration: none;
-}
-
-nav {
-    font-family: monospace;
-    width: 100%;
-    position: absolute;
-    top: 45%;
-    left: 39%;
-}
-
-ul {
-  background: darkorange;
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-
-}
-
-li {
-    color: #fff;
-  background: darkorange;
-    display: block;
-    float: left;
-    padding: 1rem;
-    position: relative;
-    text-decoration: none;
-  transition-duration: 0.5s;
-}
-  
-li a {
-  color: #fff;
-}
-
-li:hover {
-    background: red;
-    cursor: pointer;
-}
-
-ul li ul {
-    background: orange;
-    visibility: hidden;
-  opacity: 0;
-  min-width: 5rem;
-    position: absolute;
-  transition: all 0.5s ease;
-  margin-top: 1rem;
-    left: 0;
-  display: none;
-}
-
-ul li:hover > ul,
-ul li ul:hover {
-  visibility: visible;
-  opacity: 1;
-  display: block;
-}
-
-ul li ul li {
-    clear: both;
+/*
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top:50%;
   width: 100%;
 }
+*/
+
+
+
+ul{
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
+}
+
+ul li{
+	float: left;
+	width: 200px;
+	height: 40px;
+	background-color: darkorange;
+	opacity: 0.7;
+	line-height: 40px;
+	text-align: center;
+	font-size: 16px;
+	margin-right: 2px;
+}
+
+.footer{
+	position: fixed;
+ 	left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #f1f1f1;
+    color: black;
+    text-align: center;
+}
+
+
 
 
 input[type=text] {
@@ -169,7 +140,7 @@ input[type=text] {
     transition: width 0.4s ease-in-out;
     left: 35%;
     top: 35%;
-    position: absolute;
+    position: fixed;
 }
 
 @media screen and (max-width: 500px) {
@@ -181,9 +152,5 @@ input[type=text] {
   .header-right {
     float: none;
   }
-  .search{
-  	float: none;
-  	display: block;
-  	text-align: left;
-  }
+  
 }
