--- a/style.css
+++ b/style.css
@@ -1,54 +1,63 @@
-html{
-	background-color: #ffffe6;
-	margin: 0;
-	padding: 0;
-	color: white;
-	font-family: monospace
-	width:auto;
+body{
+  font: 15px/1.5 Arial, Helvetica,sans-serif;
+  padding:0;
+  margin:0;
+  background-color:#f4f4f4;
 }
 
-.header {
-  overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 20px 10px;
-  width: auto;
+/* Global */
+.container{
+  width:80%;
+  margin:auto;
+  overflow:hidden;
 }
 
-.header a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
+ul{
+  margin:0;
+  padding:0;
 }
 
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
+header{
+  background:#3995f7;
+  color:#ffffff;
+  padding-top:30px;
+  min-height:70px;
+  border-bottom: #ffff75 3px solid;
 }
 
-.header a:hover {
-  background-color: #ddd;
-  color: black;
+header a{
+  color:#ffffff;
+  text-decoration:none;
+  text-transform: uppercase;
+  font-size:16px;
 }
 
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
+header li{
+  float:left;
+  display:inline;
+  padding: 0 20px 0 20px;
 }
 
-.header-right {
-  float: right;
+header #site_name{
+  float:left;
 }
 
-h1{
-	text-align: center;
+header #site_name h1{
+  margin:0;
+}
+
+header nav{
+  float:right;
+  margin-top:10px;
+}
+
+header .highlight{
+  color:#ffff56;
+  font-weight:bold;
 }
 
 
+/*Register page (sign up form)*/
 .register{
 	width: 320px;
 	height: 450px;
@@ -81,54 +90,42 @@ input[type=submit]{
 	background-color: #ffff80;
 }
 
+/*search.html*/
 
-/*
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  top:50%;
-  width: 100%;
-}
-*/
-
-
-
-ul{
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
+/* Showcase */
+#showcase{
+  min-height:400px;
+  background-color: #a3c9ff;
+  text-align:center;
+  color:#ffffff;
 }
 
-ul li{
-	float: left;
-	width: 200px;
-	height: 40px;
-	background-color: darkorange;
-	opacity: 0.7;
-	line-height: 40px;
-	text-align: center;
-	font-size: 16px;
-	margin-right: 2px;
+#showcase h1{
+  margin-top:100px;
+  font-size:55px;
+  margin-bottom:10px;
 }
 
-ul li a{
-	text-decoration: none;
-	color: white;
-	display: block;
+/* searchbar */
+#searchbar{
+  padding:15px;
+  color:#ffffff;
+  background:#35424a
 }
 
-ul li a:hover{
-	background-color: darkorange;
-}
 
-ul li ul li{
-	display: none;
-}
 
-ul li:hover ul li{
-	display: block;
-}
+
+
+
+
+
+
+
+
+
+
+
 
 .footer{
 	position: fixed;
@@ -142,33 +139,14 @@ ul li:hover ul li{
 
 
 
+/* Media Queries */
+@media(max-width: 768px){
+  header #branding,
+  header nav,
+  header nav li,
 
-input[type=text] {
-    width: 380px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url('searchicon.png'); /*add this */
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-    left: 35%;
-    top: 35%;
-    position: fixed;
-}
+  header{
+    padding-bottom:20px;
+  }
 
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .header-right {
-    float: none;
-  }
-  
 }
