--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ ul{
   padding:0;
 }
 
+
 header{
   background:#3995f7;
   color:#ffffff;
@@ -92,15 +93,15 @@ input[type=submit]{
 
 /*search.html*/
 
-/* Showcase */
-#showcase{
-  min-height:400px;
+/* site_heading */
+#site_heading{
+  min-height:300px;
   background-color: #a3c9ff;
   text-align:center;
   color:#ffffff;
 }
 
-#showcase h1{
+#site_heading h1{
   margin-top:100px;
   font-size:55px;
   margin-bottom:10px;
@@ -110,43 +111,119 @@ input[type=submit]{
 #searchbar{
   padding:15px;
   color:#ffffff;
-  background:#35424a
+  background:#3995f7;
+  text-align:center;
 }
 
+#searchbar form{
+  margin-top:15px;
+}
 
+#searchbar input[type="text"]{
+  padding:4px;
+  height:25px;
+  width:250px;
+}
 
+.search_button{
+  height:38px;
+  background:#ffff75;
+  border:0;
+  padding-left: 20px;
+  padding-right:20px;
+  color:black;
+  cursor: pointer;
+}
 
+/* filters */
+#filters{
+  margin-top:20px;
+  min-height: 100px;
+}
 
+#filters .box{
+  float:left;
+  text-align: center;
+  width:30%;
+  padding:10px;
+}
 
+#filters .box img{
+  width:90px;
+}
 
+.dropbtn {
+    background-color: #ffff56;
+    color: #42423c;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 25%;
+}
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
 
+.dropdown-content {
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
 
-
-
-
-
-
-.footer{
-	position: fixed;
- 	left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #f1f1f1;
+.dropdown-content a {
     color: black;
-    text-align: center;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #ffff56;
+}
+
+footer{
+  padding:10px;
+  color:#ffffff;
+  background-color:#f2f235;
+  text-align: center;
+}
 
 
 /* Media Queries */
 @media(max-width: 768px){
-  header #branding,
+  header #site_name,
   header nav,
   header nav li,
+  #searchbar h1,
+  #searchbar form,
+  #filters .box,
 
   header{
     padding-bottom:20px;
   }
 
+  #site_heading h1{
+    margin-top:40px;
+  }
+
+  #searchbar search_button, .quote search_button{
+    display:block;
+    width:100%;
+  }
+
+  #searchbar form input[type="text"], .quote input, .quote textarea{
+    width:100%;
+    margin-bottom:5px;
+  }
 }
