--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
   background-color:#f4f4f4;
 }
 
+
 /* Global */
 .container{
   width:80%;
@@ -192,10 +193,56 @@ input[type=submit]{
     background-color: #ffff56;
 }
 
+
+/*results.html*/
+
+/*result menu*/
+.vertical-menu {
+    width: 200px;
+    text-align: center;
+    margin-left: 5px;
+    position: fixed;
+    z-index: 1;
+}
+
+.vertical-menu a {
+    background-color: #eee;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+ }
+
+.vertical-menu a:hover {
+    background-color: #ccc;
+}
+
+.vertical-menu a.active {
+    background-color: #a3c9ff;
+    color: white;
+}
+
+.result_map {
+    margin-left: 200px;
+    padding: 0px 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+
+
+
+
+
+
+
+
 footer{
-  padding:10px;
+  padding:20px;
+  margin-top:20px;
   color:#ffffff;
-  background-color:#f2f235;
+  background-color:#e8491d;
   text-align: center;
 }
 
