--- a/style.css
+++ b/style.css
@@ -69,13 +69,30 @@ header .highlight{
   min-height:300px;
 }
 
-input[type=text], input[type=password] {
+/*text and password forms*/
+input[type=email], input[type=text], input[type=password] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
     background: #f1f1f1;
+}
+
+/*submit button*/
+.registerbtn{
+  height:38px;
+  background:#ffff75;
+  border:0;
+  padding-left: 20px;
+  padding-right:20px;
+  color:black;
+  cursor: pointer;  
+}
+
+/*check box*/
+.terms{
+  display: inline;
 }
 
 /*search.html*/
@@ -88,6 +105,7 @@ input[type=text], input[type=password] {
   color:#ffffff;
 }
 
+/*Intro text*/
 #site_heading h1{
   margin-top:100px;
   font-size:55px;
@@ -128,6 +146,7 @@ input[type=text], input[type=password] {
   min-height: 100px;
 }
 
+
 #filters .box{
   float:left;
   text-align: center;
@@ -149,6 +168,7 @@ input[type=text], input[type=password] {
     border-radius: 25%;
 }
 
+/*drop down menu*/
 .dropdown {
     position: relative;
     display: inline-block;
@@ -188,7 +208,6 @@ input[type=text], input[type=password] {
     height: 150px;
     text-align: center;
     margin-left: 5px;
-    position: fixed;
     z-index: 1;
 }
 
@@ -212,18 +231,20 @@ input[type=text], input[type=password] {
   font-weight: bold;
 }
 
-.result_map {
+#result_map {
     margin-left: 200px;
     padding: 0px 10px;
-}
-
-img{
     width: 100%;
-    height: auto;
+    height: 650px;
 }
-
 
 /*Parking.html*/
+
+#lotA{
+    padding: 0px 10px;
+    width: 100%;
+    height: 650px;
+}
 
 /*lot name8*/
 #lot_name{
@@ -261,11 +282,7 @@ img{
     resize: vertical;
 }
 
-label {
-    padding: 12px;
-    display: inline-block;
-}
-
+/*submit button*/
 input[type=submit] {
     height: 38px; 
     margin: 10px; 
@@ -293,14 +310,18 @@ footer{
 }
 
 
-/* Media Queries need to put for all the web pages*/
-@media(max-width: 768px){
+/* Media Queries needed to put for all the web pages*/
+@media(max-width: 1024px){
   header #site_name,
   header nav,
   header nav li,
   #searchbar h1,
   #searchbar form,
-  #filters .box,
+  #filters .box,{
+    float:none;
+    text-align:center;
+    width:100%;
+  }
 
   header{
     padding-bottom:20px;
